--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -156,7 +156,7 @@ section {
     position: absolute;
     top: 0;
     left: 0;
-    z-index: 1; /* Changed from 3 to 1 so it stays behind headers and text */
+    z-index: 1 !important; /* Changed from 3 to 1 so it stays behind headers and text */
     width: 230px;
     height: auto;
     pointer-events: none;
